added texture to floor

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 		<hr>
 		<h2> Link to Code </h2>
 		<p>
-			The source code can be found <a href="#">Here.</a>
+			The source code can be found <a href="https://github.com/natelearnscode/ClothAndFluidSimulation">Here.</a>
 		</p>
 		<hr>
 		<h2> List of Tools/Libraries Used </h2>
@@ -187,6 +187,11 @@
 						These include three.module.js, dat.gui.module.js, OrbitControls.js, and stats.js. 
 						To run the code locally, the http-server needs to be install first.
 						Then running npx http-server should start a server that serves all the files in the root directory.
+					</p>
+				</li>
+				<li>
+					<p>
+						Additionally, I used some textures from: https://assetstore.unity.com/packages/2d/textures-materials/free-stylized-pbr-textures-pack-111778.
 					</p>
 				</li>
 			</ul>
